--- a/css/pagina_inicial/introducao.css
+++ b/css/pagina_inicial/introducao.css
@@ -2,9 +2,6 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   color: white;
-  max-width: 1600px;
-  margin: 0px auto;
-  padding: 0px 220px;
   gap: 100px;
 }
 
@@ -12,26 +9,71 @@
   align-self: end;
   padding-bottom: 250px;
 }
-.intro-imagem img {
-  height: 100%;
-  object-fit: cover;
-}
-
-.introducao h1 {
-  font-size: 4rem;
-  line-height: 1.12;
-  font-weight: 600;
-  margin-bottom: 30px;
-}
 
 .introducao p {
-  font-size: 1.5rem;
-  line-height: 1.5;
   color: #b2b2b2;
   margin-bottom: 50px;
 }
 
-.fundo-preto {
+main {
   background-color: black;
   box-shadow: inset 0 -120px white;
+}
+
+.introducao img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+@media (max-width: 1600px) {
+  .introducao {
+    gap: 70px;
+  }
+
+  .introducao h1 {
+    padding-top: 30px;
+  }
+}
+
+@media (max-width: 1100px) {
+  .introducao {
+    gap: 10px;
+    grid-template-columns: 1fr;
+    justify-content: center;
+  }
+
+  .introducao-texto {
+    text-align: center;
+    padding-bottom: 30px;
+  }
+
+  .introducao img {
+    justify-self: center;
+  }
+
+  .fundo-preto_m_branca {
+    box-shadow: none;
+    padding-bottom: 60px;
+  }
+}
+
+@media (max-width: 800px) {
+  .introducao {
+    padding: 0px 10px;
+  }
+}
+
+@media (max-width: 300px) {
+  .cabecalho {
+    flex-direction: column;
+    row-gap: 30px;
+  }
+  .menu {
+    gap: 7.5px;
+  }
+  .menu a {
+    font-size: 0.8rem;
+    padding: 15px 10px;
+  }
 }
