--- a/css/pagina_inicial/introducao.css
+++ b/css/pagina_inicial/introducao.css
@@ -36,11 +36,10 @@ main {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1000px) {
   .introducao {
     gap: 10px;
     grid-template-columns: 1fr;
-    justify-content: center;
   }
 
   .introducao-texto {
@@ -49,12 +48,11 @@ main {
   }
 
   .introducao img {
-    justify-self: center;
+    height: 400px;
   }
 
-  .fundo-preto_m_branca {
-    box-shadow: none;
-    padding-bottom: 60px;
+  main {
+    box-shadow: inset 0 -80px white;
   }
 }
 
