--- a/css/pagina_inicial/seguros.css
+++ b/css/pagina_inicial/seguros.css
@@ -7,11 +7,10 @@
 .container-seguros {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  justify-items: center;
   gap: 30px;
   justify-items: stretch;
 }
-.container-seguros h1 {
+.container-seguros h2 {
   grid-column: 1/-1;
   justify-self: start;
 }
@@ -43,17 +42,17 @@
   padding-bottom: 20px;
 }
 
-.container-seguros .txt-0 {
+.container-seguros .rbot-txt-4 {
   margin-bottom: 40px;
   position: relative;
 }
 
-.prata h5:not(.preco) {
+.prata h3:not(.preco) {
   margin-bottom: 40px;
   color: #9c9c9c;
 }
 
-.ouro h5:not(.preco) {
+.ouro h3:not(.preco) {
   margin-bottom: 40px;
   color: #ffbb00;
 }
@@ -80,4 +79,11 @@
   background: url("../../img/icones/lista.svg");
   width: 13px;
   height: 9px;
+}
+
+@media (max-width: 800px) {
+  .container-seguros {
+    grid-template-columns: 1fr;
+    justify-items: center;
+  }
 }
