--- a/css/pagina_inicial/parceiros.css
+++ b/css/pagina_inicial/parceiros.css
@@ -31,3 +31,18 @@
 .parceiros img {
   margin: auto;
 }
+
+@media (max-width: 800px) {
+  .parceiros ul {
+    grid-template-columns: 1fr 1fr;
+    padding: 0 20px;
+  }
+
+  .parceiros li:nth-child(odd) {
+    border-left: none;
+  }
+
+  .parceiros li:not(:nth-child(7), :nth-child(8)) {
+    border-bottom: solid 1px #ededed;
+  }
+}
