--- a/css/pagina_inicial/depoimento.css
+++ b/css/pagina_inicial/depoimento.css
@@ -1,13 +1,14 @@
 .depoimento {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #ffbb00;
+  background-color: var(--p5);
 }
 
 .depoimento img {
   object-fit: cover;
   height: 100%;
   width: 100%;
+  border-radius: 0px;
 }
 .container-depoimento {
   padding-bottom: 100px;
@@ -32,7 +33,7 @@
 }
 
 .depoimento .font-ppns-5 {
-  color: #664400;
+  color: var(--p2);
   font-family: Merriweather;
 }
 
