--- a/css/pagina_inicial/introducao.css
+++ b/css/pagina_inicial/introducao.css
@@ -1,7 +1,7 @@
 .introducao {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  color: white;
+  color: var(--c1);
   gap: 100px;
 }
 
@@ -11,13 +11,13 @@
 }
 
 .introducao p {
-  color: #b2b2b2;
+  color: var(--c9);
   margin-bottom: 50px;
 }
 
 main {
-  background-color: black;
-  box-shadow: inset 0 -120px white;
+  background-color: var(--c2);
+  box-shadow: inset 0 -120px var(--c1);
 }
 
 .introducao img {
@@ -52,7 +52,7 @@ main {
   }
 
   main {
-    box-shadow: inset 0 -80px white;
+    box-shadow: inset 0 -80px var(--c1);
   }
 }
 
