--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,14 @@
-@import url(./header.css);
 @import url(./pagina_inicial/introducao.css);
 @import url(./pagina_inicial/bicicletas.css);
 @import url(./pagina_inicial/tecnologias.css);
 @import url(./pagina_inicial/parceiros.css);
 @import url(./pagina_inicial/depoimento.css);
 @import url(./pagina_inicial/seguros.css);
-@import url(./global.css);
-@import url(./footer.css);
+
+@import url(./global/header.css);
+@import url(./global/footer.css);
+
+@import url(./global/cores.css);
+@import url(./global/tipografia.css);
+
+@import url(./global/global.css);
