--- a/css/pagina_inicial/introducao.css
+++ b/css/pagina_inicial/introducao.css
@@ -1,4 +1,8 @@
 .introducao {
+  box-shadow: inset 0 -120px var(--c1);
+}
+
+.introducao-container {
   display: grid;
   grid-template-columns: 1fr 1fr;
   color: var(--c1);
@@ -13,11 +17,6 @@
 .introducao p {
   color: var(--c9);
   margin-bottom: 50px;
-}
-
-main {
-  background-color: var(--c2);
-  box-shadow: inset 0 -120px var(--c1);
 }
 
 .introducao img {
