--- a/css/pagina_inicial/tecnologias.css
+++ b/css/pagina_inicial/tecnologias.css
@@ -1,4 +1,4 @@
-.tecnologia-bg {
+.tecnologia {
   background-color: var(--c2);
   box-shadow: inset 0 -80px var(--c1), inset 0 80px var(--c1);
 }
@@ -81,7 +81,7 @@ span {
     gap: 30px;
   }
 
-  .tecnologia-bg {
+  .tecnologia {
     box-shadow: none;
   }
 
