--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,8 @@
 @import url(./pagina_inicial/depoimento.css);
 @import url(./pagina_inicial/seguros.css);
 
+@import url(./bicicletas/lista-bikes.css);
+
 @import url(./global/header.css);
 @import url(./global/footer.css);
 
