--- a/css/bicicletas/lista-bikes.css
+++ b/css/bicicletas/lista-bikes.css
@@ -1,9 +1,9 @@
 .lista-bicicletas {
   padding-top: 120px;
-  padding-bottom: 120px;
+  padding-bottom: 60px;
 }
 
-.lista-bicicletas .container-biciletas:nth-child(1) {
+.lista-bicicletas .container-biciletas {
   padding-bottom: 60px;
 }
 
@@ -39,6 +39,7 @@
   padding: 8px 16px 8px 8px;
   border-radius: 5px 0px 0px 5px;
 }
+
 .bicicletas-info {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -81,9 +82,40 @@
   align-self: end;
   justify-self: end;
 }
-.bicicletas-info a img {
-  display: inline-block;
+
+.lista-bicicletas .botao {
+  display: flex;
+  align-items: center;
+  gap: 16px;
 }
-.bicicletas-info a p {
-  display: inline-block;
+
+.bicicletas-info .botao:hover img {
+  transition: transform 0.3s;
+}
+
+.bicicletas-info .botao:hover img {
+  transform: translateX(5px);
+}
+
+@media (max-width: 1000px) {
+  .container-biciletas {
+    grid-template-columns: 1fr;
+  }
+
+  .lista-bicicletas .black-bg {
+    background: linear-gradient(to right, var(--c1) 0, var(--c3) 0);
+  }
+
+  .lista-bicicletas {
+    padding-top: 60px;
+    padding-bottom: 0px;
+  }
+}
+
+@media (max-width: 500px) {
+  .bicicletas-info {
+    display: grid;
+    grid-template-columns: 1fr;
+    gap: 0px;
+  }
 }
