--- a/css/pagina_inicial/introducao.css
+++ b/css/pagina_inicial/introducao.css
@@ -14,6 +14,10 @@
   padding-bottom: 250px;
 }
 
+.introducao h1 {
+  padding-bottom: 30px;
+}
+
 .introducao p {
   color: var(--c9);
   margin-bottom: 50px;
@@ -36,7 +40,7 @@
 }
 
 @media (max-width: 1000px) {
-  .introducao {
+  .introducao-container {
     gap: 10px;
     grid-template-columns: 1fr;
   }
@@ -53,10 +57,14 @@
   main {
     box-shadow: inset 0 -80px var(--c1);
   }
+
+  .introducao-texto {
+    padding-top: 60px;
+  }
 }
 
 @media (max-width: 800px) {
-  .introducao {
+  .introducao-container {
     padding: 0px 10px;
   }
 }
