--- a/css/pagina_inicial/parceiros.css
+++ b/css/pagina_inicial/parceiros.css
@@ -46,3 +46,9 @@
     border-bottom: solid 1px var(--c12);
   }
 }
+
+@media (max-width: 800px) {
+  .parceiros {
+    padding-bottom: 60px;
+  }
+}
