--- a/css/pagina_inicial/tecnologias.css
+++ b/css/pagina_inicial/tecnologias.css
@@ -15,6 +15,10 @@
   padding-bottom: 160px;
 }
 
+.tecnologia h2 {
+  padding-bottom: 32px;
+}
+
 .tecnologias p {
   padding-bottom: 20px;
   color: var(--c9);
