--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,9 @@
 @import url(./bicicleta/bicicleta.css);
 @import url(./bicicleta/seguro.css);
 
+@import url(./seguros/vantagens.css);
+@import url(./seguros/perguntas.css);
+
 @import url(./global/header.css);
 @import url(./global/footer.css);
 
