--- a/css/global/tipografia.css
+++ b/css/global/tipografia.css
@@ -81,6 +81,10 @@ dd {
   font-weight: 500;
 }
 
+.font-ppns-11 {
+  font-weight: 600;
+}
+
 .font-ppns-10 {
   font-size: 1.5rem;
   line-height: 1.5;
