--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,8 @@
 @import url(./contato/contato.css);
 @import url(./contato/locais.css);
 
+@import url(./termos/termos.css);
+
 @import url(./global/header.css);
 @import url(./global/footer.css);
 
