--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,8 @@
 
 @import url(./termos/termos.css);
 
+@import url(./orcamento/orcamento.css);
+
 @import url(./global/header.css);
 @import url(./global/footer.css);
 
