--- a/css/termos/termos.css
+++ b/css/termos/termos.css
@@ -10,6 +10,10 @@
   padding-bottom: 16px;
 }
 
+.termos p {
+  padding-bottom: 16px;
+}
+
 .termos li p:not(:last-child) {
   padding-bottom: 16px;
 }
