--- a/css/contato/contato.css
+++ b/css/contato/contato.css
@@ -8,7 +8,8 @@
 
 .loja-online {
   padding: 60px;
-  background: var(--c2);
+  background: var(--c2) url("../../img/dec/bottom-left.svg") no-repeat bottom
+    20px left 20px;
   border-radius: 5px 0 0 5px;
 }
 
@@ -41,7 +42,8 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   gap: 20px;
-  background: var(--c1);
+  background: var(--c1) url("../../img/dec/bottom-right.svg") no-repeat bottom
+    20px right 20px;
   border-radius: 0 5px 5px 0;
 }
 
@@ -87,6 +89,7 @@
   .loja-online {
     padding: 30px;
     border-radius: 5px 5px 0 0;
+    background: var(--c2);
   }
   .contato-form {
     padding: 30px;
