--- a/css/global/global.css
+++ b/css/global/global.css
@@ -59,6 +59,7 @@ img[src$=".jpg"] {
 .titulo-main {
   padding-top: 60px;
   padding-bottom: 60px;
+  background: url("../../img/dec/top-right.svg") no-repeat top 40px right 20px;
 }
 
 @media (max-width: 1200px) {
